# mcp-sse-server

./: .gitignore  mcp_server.py  pyproject.toml  test_graph.py
deployment/bicep/: deploy.sh  main.bicep
src/: config.py  mcp_tools.py
src/actions/: __init__.py  edit_document.py  fill_template.py  get_context.py  list_projects.py  list_templates.py  read_template_placeholders.py
src/utils/: __init__.py  docx_utils.py  graph_client.py
